k8s-configuration/django-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  namespace: myproject
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
      - name: django-backend
        image: my-dockerhub/django-image:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-backend-service
  namespace: myproject
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: django-backend
  type: ClusterIP
