k8s-configuration/react-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: myproject
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: my-dockerhub/react-image:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
  namespace: myproject
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: react-frontend
  type: ClusterIP
